# ResearchPilot-AI

./: README.md  pyproject.toml
app/: __init__.py  agent.py  agent_runtime_app.py
app/app_utils/: paper_db.py  session_store.py
frontend/: index.css  index.html  index.js
skills/research_analyzer/: SKILL.md  analysis_tools.py
tests/features/: research.feature
tests/features/steps/: research_steps.py
