[project]
name = "research-pilot-ai"
version = "0.1.0"
description = "Autonomous Research Companion"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "behave>=1.2.6",
    "requests>=2.31.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
